Revision history HTML::Lint and Test::HTML::Lint.

NOTE: All bugs and requests are now being handled through GitHub.

    https://github.com/petdance/html-lint/issues

Please DO NOT send bug reports to http://rt.cpan.org/.

2.25_01 Fri Dec 23 22:36:17 CST 2016
    [ENHANCEMENTS]
    Added two new types of errors to let you know you're using the
    API incorrectly.  You should be parsing files like this:

        my $lint = HTML::Lint->new;
        $lint->newfile( $filename );
        $lint->parse( $line );
        $lint->eof();
        my @errors = $lint->errors();

    If you neglect to call ->parse or ->eof, you'll get an error returned
    in the list of errors from ->errors().

    [FIXES]
    Test::HTML::Lint::html_fragment_ok() was not properly calling ->eof.


2.24    Wed Dec  7 22:20:13 CST 2016
    Official release.  No changes from 2.23_01.


2.23_01 Tue Dec  6 22:48:56 CST 2016
    [ENHANCEMENTS]
    Added detection of unknown HTML entities, like "known &unclosed
    &entities are not found".  Also fixes the case where HTML::Lint
    gets confused by an entity like "&sup2;" which it thought was an
    unterminated "&sup;" entity.  Thanks, Klaus S. Madsen.

    [FIXES]
    Errors of the type doc-tag-required did not come out in any defined
    order.  They are now sorted by tag name.  This was discovered
    because hash randomization caused tests to fail on Perl 5.18 and
    above. Thanks, Slaven Rezic, Andrew Main and Lisa Hare.

    Handle some warnings that get thrown if certain values are undef.
    Thanks, Yves Lavoie.

    Handle characters that are not handled by HTML::Entities. (GitHub
    issue #13) Thanks, Tim Landscheidt.

    [INTERNALS]
    Add a test to verify a fixed bug. Thanks to Lance Wicks as part of
    the CPAN Pull Request Challenge.


2.22    Mon Apr  6 15:47:11 CDT 2015
    [CHANGES THAT COULD BREAK YOUR CODE]
    Previously, html_ok() would not check the entire structure of a web